--- a/elements.html
+++ b/elements.html
@@ -65,6 +65,7 @@
 												<li>LoopBack4</li>
 												<li>bootstrap</li>
 												<li>materialize</li>
+												<li>Blazor</li>
 											</ol>
 											
 										</div>
