--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 							<li><a href="#intro">Quien soy</a></li>
 							<li><a href="#one">Mis proyectos</a></li>
 							<li><a href="#two">Por que Contratarme</a></li>
+							<li><a href="#four">Certificaciones</a></li>
 							<li><a href="#three">Contacto</a></li>
 						</ul>
 					</nav>
@@ -34,10 +35,10 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hola <br> Soy Christian Herrera</Soy> un <span style="color:#a684bd"> developer fullstack </span> apasionado por la programacion</h1>
-							<p>Me dedico a desarrollar en Tecnologias como angular,nodejs,tengo dominio en lenguajes tales como:
-								JavaScript,Java,Python,C#,TypeScript,html,Css, y tambien uso de algunos framework de diseño como bootstrap y materialize <br />
+							<h1>Bienvenido <br> Christian Orlando Herrera Leon<br> Soy <span style="color:#a684bd"> Developer fullstack <br></span> Apasionado por la programación</h1>
+							<p>Me dedico a desarrollar en Tecnologías como angular,nodejs, tengo dominio en lenguajes tales como: JavaScript, Java, Python, C#, TypeScript, html, Css, y también uso de algunos framework de diseño como bootstrap y materialize <br />
 								<span class="image fit"><img src="images/imagende programacion.JPG" alt="" /></span>
+					
 							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Ver mas</a></li>
@@ -52,8 +53,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Proyecto IPS Integral</h2>
-									<p>Proyecto realizado con un equipo de programadores para una ips el cual tiene su respectivo login,Registro de personas,Ingreso de Pacientes,Ingresar medicos y tiene una opcion para ingresar como administrador.
-										Para mas informacion visitar <a href="https://ipssaludintegral.azurewebsites.net/"><span style="color:#a684bd">ips de salud </span> </a>
+									<p>Proyecto realizado con un equipo de programadores para una ips el cual tiene su respectivo login, Registro de personas, Ingreso de Pacientes, Ingresar médicos y tiene una opción para ingresar como administrador. Para mas información visitar ips de salud  <a href="https://ipssaludintegral.azurewebsites.net/"><span style="color:#a684bd">ips de salud </span> </a>
 									</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Ver mas</a></li>
@@ -66,7 +66,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>App Empresa</h2>
-									<p>Aplicacion realizada con tecnologia Angular con equipo de trabajo de desarrollarores en la universiadad, Aun no se realiza despliegue pero funciona muy bien segun los requerimientos exigidos.<a href=""><span style="color:#a684bd">app-pedidos-backend </span> </a> </p>
+									<p>Aplicación realizada con tecnología Angular con equipo de trabajo de desarrolladores en la universidad, Aun no se realiza despliegue, pero funciona muy bien según los requerimientos exigidos.<a href=""><span style="color:#a684bd">app-pedidos-backend </span> </a> </p>
 									<ul class="actions">
 										<li><a href="empresa.html" class="button">Ver mas</a></li>
 									</ul>
@@ -85,7 +85,7 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Html</h3>
-									<p>Domicio de html5 y creacion de hojas de estilos en css</p>
+									<p>Domicio de html5 y creacion de hojas de estilos en css.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
@@ -100,12 +100,12 @@
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>diseño</h3>
-									<p>Diseño y desarrollo ajustado a tus verdaderas necesidades</p>
+									<p>Diseño y desarrollo ajustado a tus verdaderas necesidades.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Implementacion de enlaces</h3>
-									<p>Uso de enlaces para la generalizacion de la informacion</p>
+									<p>Uso de enlaces para la generalizacion de la informacion.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
@@ -119,7 +119,15 @@
 							</ul>
 						</div>
 					</section>
-
+                <!-- four -->
+					<section id="four" class="wrapper style2 spotlights">
+						<div class="inner">
+							<h2>Certificaciones</h2>
+							<p>Certificado obtenido al realizar un diplomado en habilidades de programación con énfasis en aplicaciones web realizado en universidad publica colombiana (Universidad de Caldas) modalidad online con una intensidad horaria de 800 horas.</p>
+							<span class="image fit"><img src="images/Diplomado.JPG" width="0" height="700" /></span>
+							<li><a href="elements.html" class="button">Ver mas</a></li>
+						</div>
+					</section>
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
@@ -135,7 +143,7 @@
 												<input type="text" name="name" id="name" />
 											</div>
 											<div class="field half">
-												<label for="email">Correo electronico</label>
+												<label for="email">Correo electrónico</label>
 												<input type="text" name="email" id="email" />
 											</div>
 											<div class="field">
@@ -152,12 +160,12 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Ubicacion actual</h3>
+											<h3>Ubicación actual</h3>
 											<span>Calama<br />
 											Chile</span>
 										</li>
 										<li>
-											<h3>Correo electronico</h3>
+											<h3>Correo electrónico </h3>
 											<a href="#">orlanherre2011@hotmail.com</a>
 										</li>
 										<li>
